Add options in javafx-maven-plugin