@@ -55,6 +55,12 @@
                 <version>0.0.8</version>
                 <configuration>
                     <mainClass>ExcelPhoneResolver/com.hizencode.excelphoneresolver.main.Launcher</mainClass>
+                    <options>
+                        <option>--add-exports</option>
+                        <option>javafx.base/com.sun.javafx.event=org.controlsfx.controls</option>
+                        <option>--add-exports</option>
+                        <option>javafx.controls/com.sun.javafx.scene.control.behavior=org.controlsfx.controls</option>
+                    </options>
                 </configuration>
             </plugin>
         </plugins>
